# Django-Ecommerce

./: .gitignore  README.md  requirements.in  requirements.txt  settings.dev.ini  settings.prod.ini  setup.cfg
apps/account/api/: urls.py
apps/account/forms/: __init__.py  auth.py
apps/account/helper/: enums.py
apps/account/models/: profile.py  user.py
apps/basket/: apps.py  urls.py
apps/basket/api/: urls.py
apps/basket/helper/: enums.py  exceptions.py
apps/basket/models/: __init__.py  order.py  pack_order.py
apps/basket/resources/: __init__.py  order.py
apps/basket/services/: __init__.py  post_payment.py  pre_payment.py  refund.py
apps/basket/views/: __init__.py  checkout.py  checkout_success.py
apps/feedback/models/: __init__.py  review.py  wishlist.py
apps/warehouse/admin/: product.py
apps/warehouse/api/: urls.py
apps/warehouse/helper/: enums.py
apps/warehouse/models/: __init__.py  attribute.py  product.py  product_gallery.py  tag.py
apps/warehouse/services/: currency.py
apps/warehouse/translation/: __init__.py  attribute.py
dataset/: __init__.py  read_dataset.py
django_stubs/warehouse/: apps.pyi  signals.pyi
django_stubs/warehouse/helper/: enums.pyi
django_stubs/warehouse/resources/: product.pyi
django_stubs/warehouse/tests/: test_brand.pyi
django_stubs/warehouse/translation/: category.pyi  product.pyi
kernel/settings/: base.py  packages.py  production.py  secure.py
locale/fa/LC_MESSAGES/: django.po
painless/helper/: enums.py
painless/models/: __init__.py  mixins.py
painless/utils/: upload_to.py
(+36 files in other folders)
